<resources>
    <string name="app_name">LayoutsEj2</string>
    <string name="importe">Importe</string>
    <string name="euros">Euros</string>
    <string name="dolares">Dolares</string>
    <string name="libras">Libras</string>
    <string name="convertir">Convertir</string>
    <string name="resultado">Resultado</string>
    <string name="select_both">Seleccione ambas monedas</string>
</resources>