<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/importe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/importe"
        android:hint="@string/importe"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/currencyButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/currencyButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importe"
        app:layout_constraintBottom_toTopOf="@+id/convertButton">

        <RadioGroup
            android:id="@+id/currencyFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/currencyTo">
            <RadioButton
                android:id="@+id/fromEUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros"
                />
            <RadioButton
                android:id="@+id/fromUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolares" />
             <RadioButton
                android:id="@+id/fromGBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libras" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/currencyTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/currencyFrom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RadioButton
                android:id="@+id/toEUR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euros" />
            <RadioButton
                android:id="@+id/toUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolares" />
            <RadioButton
                android:id="@+id/toGBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libras" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currencyButtons"
        app:layout_constraintBottom_toTopOf="@+id/resultado"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>